= edge
* API change: Netzke::Base: <tt>id_name</tt> accessor renamed to <tt>global_id</tt>
* Several internal code changes
* Internal change: Hash: <tt>flatten</tt> method renamed to <tt>flatten_with_type</tt>

= v0.4.4 - 2009-10-12
* API change: default handlers for actions and tools are now supposed to be prefixed with "on". E.g.: if you declare an action named <tt>clear_table</tt>, the handler must be called (in Ruby) <tt>on_clear_table</tt> (mapped to <tt>onClearTable</tt> in JavaScript).
* Internal: the JavaScript instance now knows if persistent config is enabled (by checking this.persistentConfig).
* Fix: solving the "Node cannot be inserted at the specified point in the hierarchy" problem by being more strict with duplicated IDs for elements on the same page.
* Fix: Ext 3.0 compatibility.
* Impr: <tt>getChildWidget</tt> now allows referring to a widget like this: "parent__parent__some_widget__some_nested_widget"

= v0.4.3
* Fix: reworking loadAggregatee()-related code, closing a security flaw when a malicious browser could send any configuration options to instantiate the widget being loaded.

= v0.4.2 - 2009-09-11
* Fix: the API call (at the JavaScript side) was ignoring the callback parameter.
* Impr: if the array of API points is empty, it's not added into js_config anymore.
* New: new testing widgets in netzke_controller.
* Fix: extra CSS includes now take effect.
* New: Support for masquerading as "World". In this mode all the "touched" persistent preferences will be overwritten for all roles and users.

= v0.4.1 - 2009-09-06
* Version bumb to force github rebuild the gem (Manifest is now included)

= v0.4.0 - 2009-09-05
* Major refactoring.

= v0.3.2 - 2009-06-05
* Netzke doesn't overwrite session[:user] anymore to not cause authentication-related problems.

= v0.3.1 - 2009-05-07
* Fix: persistent_config_manager can now be set to nil, and it will work fine

= v0.3.0 - 2009-05-07