@@ -43,6 +43,14 @@ module Netzke
   end
 
   class DeepNestedWidget < Base
+    def initial_aggregatees
+      {
+        :nested => {:widget_class_name => "VeryDeepNestedWidget"}
+      }
+    end
+  end
+  
+  class VeryDeepNestedWidget < Base
   end
 
   class JsInheritanceWidget < Widget
@@ -94,6 +102,17 @@ class NetzkeCoreTest < ActiveSupport::TestCase
     assert_equal 'my_widget__nested_one', nested_widget_one.global_id
     assert_equal 'my_widget__nested_two', nested_widget_two.global_id
     assert_equal 'my_widget__nested_two__nested', deep_nested_widget.global_id
+  end
+  
+  test "child global id" do
+    w = Widget.new(:name => "a_widget")
+    deep_nested_widget = w.aggregatee_instance(:nested_two__nested)
+    assert_equal("a_widget__nested_two", deep_nested_widget.global_id_by_reference(:parent))
+    assert_equal("a_widget", deep_nested_widget.global_id_by_reference(:parent__parent))
+    assert_equal("a_widget__nested_one", deep_nested_widget.global_id_by_reference(:parent__parent__nested_one))
+    assert_equal("a_widget__nested_two__nested__nested", deep_nested_widget.global_id_by_reference(:nested))
+    assert_equal("a_widget__nested_two__nested__non_existing", deep_nested_widget.global_id_by_reference(:non_existing))
+    assert_nil(deep_nested_widget.global_id_by_reference(:parent__parent__parent)) # too far up
   end
   
   test "default config" do
