@@ -1,7 +1,8 @@
 = edge
 * API change: Netzke::Base: <tt>id_name</tt> accessor renamed to <tt>global_id</tt>
 * Several internal code changes
-* Internal change: Hash: <tt>flatten</tt> method renamed to <tt>flatten_with_type</tt>
+* Slightly better test coverage
+* New: <tt>Base#global_id_by_reference</tt> method
 
 = v0.4.4 - 2009-10-12
 * API change: default handlers for actions and tools are now supposed to be prefixed with "on". E.g.: if you declare an action named <tt>clear_table</tt>, the handler must be called (in Ruby) <tt>on_clear_table</tt> (mapped to <tt>onClearTable</tt> in JavaScript).
